kubernetes/apps/open-webui/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`open-webui.mpdavis.com`)
      kind: Rule
      services:
        - name: open-webui
          port: 8080
  tls: {}
